--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,1 +1,19 @@
 @import "node_modules/bootstrap/scss/bootstrap";
+
+*{
+    box-sizing: border-box; 
+}
+
+ul{
+    list-style-type: none;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+.wrapper{
+    max-width: 1000px;
+    margin: 0 auto;
+  }
